@@ -14,7 +14,8 @@ src/gst-introduction.xml \
 src/gst-playbin.xml \
 src/gst-pipeline.xml \
 src/gst-src-sink-pad.xml \
-src/gst-seeking.xml
+src/gst-seeking.xml \
+src/gst-caps.xml
  
 ref-html: gst-tutorial ${TUTORIALLINKS} ${XSLFILES} ${TUTORIALXMLFILES}
 	xsltproc --nonet --xinclude -o pygst-tutorial/ \
