@@ -1,4 +1,9 @@
 <literallayout>
+<emphasis role="bold">2006-12-29  Jens Persson</emphasis>
+
+    * Added Capabilities chapter
+    * Various other fixes
+    
 <emphasis role="bold">2006-12-19  Jens Persson</emphasis>
 
     * Added Seeking chapter
