@@ -1,3 +1,8 @@
+2006-12-29  Jens Persson
+
+    * Added Capabilities chapter
+    * Various other fixes
+    
 2006-12-19  Jens Persson
 
     * Added Seeking chapter
